--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/conjunctor/_app/immutable/entry/start.BGT62NH6.js">
-		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/CxJnrAv4.js">
+		<link rel="modulepreload" href="/conjunctor/_app/immutable/entry/start.B4JJYPdi.js">
+		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/D8NqxGjM.js">
 		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/DlFgvpJq.js">
 		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/BzMJjdp_.js">
-		<link rel="modulepreload" href="/conjunctor/_app/immutable/entry/app.B6VkVjyD.js">
+		<link rel="modulepreload" href="/conjunctor/_app/immutable/entry/app.C-sJTrMP.js">
 		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/e3Auul-U.js">
 		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/X5bojiGP.js">
 		<link rel="modulepreload" href="/conjunctor/_app/immutable/chunks/Cb4KWquP.js">
@@ -18,7 +18,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1aur5mb = {
+					__sveltekit_39i9tm = {
 						base: "/conjunctor",
 						assets: "/conjunctor"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/conjunctor/_app/immutable/entry/start.BGT62NH6.js"),
-						import("/conjunctor/_app/immutable/entry/app.B6VkVjyD.js")
+						import("/conjunctor/_app/immutable/entry/start.B4JJYPdi.js"),
+						import("/conjunctor/_app/immutable/entry/app.C-sJTrMP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
